--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,7 @@
 
+:root {
+    --whithe : #f1f1f1;
+}
 h1, h2, h3, .titre-section {
     font-family: Montserrat, Helvetica, sans-serif;
 }
@@ -6,17 +9,20 @@ h1, h2, h3, .titre-section {
     width: 3.125rem;
     width: 3.125rem;
 }
-#presentation {
+.banniere-dog {
+    background: url('../assets/img/bulldog_banniere.jpg') center/cover;
+}
+.presentation {
     padding: 6.25rem 0.625rem;
 }
 .titre-section {
     color: #000;
     text-align: center;
     font-size: 4.063rem;
-    padding: 50px 20px 120px;
+    padding: 3.125rem 1.25rem 7.5rem;
     font-family: Montserrat, Helvetica, sans-serif;
 }
-.section-info {
+.info {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -25,37 +31,37 @@ h1, h2, h3, .titre-section {
     background: #f1f1f1;
     position: relative;
 }
-.carte-info {
-    width: 350px;
+.info-card {
+    width: 21.875rem;
     height: auto;
-    margin: 0 20px 80px;
+    margin: 0 1.25rem 80px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
     position: relative;
     z-index: 1;
 }
-.deco-infos {
+.info-deco {
     position: absolute;
     z-index: -1;
     top: -70px;
     left: -100px;
 }
-.container-photo-info img {
+.info-container img {
     width: 100%;
     height: 500px;
     object-fit: cover;
 }
 
-.carte-info h2 {
+.info-card h2 {
     color: #333;
     text-align: center;
-    font-size: 25px;
-    padding: 20px 5px;
+    font-size: 1.563rem;
+    padding: 1.25rem 0.313rem;
 }
-.carte-info p {
+.info-card p {
     color: #333;
     text-align: center;
-    font-size: 23px;
-    padding: 0 5px 15px;
+    font-size: 1.438rem;
+    padding: 0 0.313rem 0.938rem;
 }
 .Evenements {
     display: flex;
@@ -65,29 +71,29 @@ h1, h2, h3, .titre-section {
 .colonneEvenements {
     width: 30%;
     text-align: center;
-    margin: 50px 20px 70px;
+    margin: 3.125rem 1.25rem 4.375rem;
 }
 .colonneEvenements h3 {
-    font-size: 50px;
-    margin-bottom: 20px;
+    font-size: 3rem;
+    margin-bottom: 1.25rem;
 }
 .colonneEvenements p {
-    font-size: 18px;
+    font-size: 1.2rem;
     width: 70%;
-    margin: 0 auto 30px;
+    margin: 0 auto 1.875rem;
 }
 .parallax {
     background-image: url(../assets/img/image-parallax.jpg);
     background-attachment: fixed;
     background-position: center;
     width: 100%;
-    height: 400px;
+    height: 25rem;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .parallax-txt {
-    font-size: 100px;
+    font-size: 6.25rem;
     text-align: center;
     font-weight: 700;
 }
@@ -103,11 +109,8 @@ h1, h2, h3, .titre-section {
         width: 22rem
     }
     .colonneEvenements h3 {
-        font-size: 40px;
-        margin-bottom: 20px;
-    }
-    .infoEvenements:nth-child(1) {
-        margin: 50px 20px 0px;
+        font-size: 2.5rem;
+        margin-bottom: 1.25rem;
     }
     .parallax-txt {
         font-size: 4.375rem;
